# crosslingo

./: .gitignore  DATA_SOURCES.md  README.md  TODO.md  crossword.py  main.py  pyproject.toml  tasks.py  test.ipynb
data/: create_db.sql
site/: wordle.html
site/wordle_files/: a.html  a_002.html
src/: crossword.py  data_processing.py  word_grid.py  words.py
tests/: crossword_test.py  word_grid_test.py
